--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -28,7 +28,7 @@
 .hero-content > h1 {
   color: rgb(var(--secondary));
   font-size: 3.5rem;
-  text-shadow: 1px 1px 3px rgb(var(--primary));
+  text-shadow: 1px 1px 1px rgb(var(--primary));
   letter-spacing: 0.2rem;
 }
 
@@ -37,7 +37,7 @@
   font-size: 1.7rem;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
-  text-shadow: 1px 1px 2px rgb(var(--primary));
+  text-shadow: 1px 1px rgb(var(--primary));
   letter-spacing: 0.1rem;
 }
 
