--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,23 @@
   justify-content: center;
   font-size: 3rem;
 }
+
+
+*::-webkit-scrollbar {
+    width: 0.7rem;
+}
+
+*::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 1rem rgba(var(--hover), 0.4);
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background-color: rgba(var(--hover), 0.4);
+}
+
+/* Handle */
+*::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: rgba(var(--secondary), 0.5);
+    -webkit-box-shadow: inset 0 0 1rem rgba(var(--hover), 0.4);
+}
