--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -21,10 +21,12 @@
   background-color: rgba(var(--primary));
 }
 
+
 .modal-header {
   display: flex;
   justify-content: space-between;
 }
+
 
 .modal-header h2 {
   margin-left: 40%;
@@ -43,6 +45,31 @@
   color: rgb(var(--hover));
   text-shadow: 0.2px 0.2px rgb(var(--primary));
 }
+
+.modal-body-info::-webkit-scrollbar {
+    width: 0.5rem;
+}
+
+.modal-body-info::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 1rem rgba(var(--hover), 0.2);
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background-color: rgba(var(--hover), 0.1);
+}
+
+/* Handle */
+.modal-body-info::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: rgba(var(--secondary), 0.7);
+    -webkit-box-shadow: inset 0 0 1rem rgba(var(--hover), 0.2);
+}
+
+
+
+
+
+
 
 .modal-footer {
   justify-content: space-evenly;
