--- a/src/components/ContactUs.css
+++ b/src/components/ContactUs.css
@@ -1,6 +1,6 @@
 .contact-container {
-  background-color: #242424;
-  color: var(--primary);
+  background-color: rgba(var(--background), 0.5);
+  color: rgb(var(--secondary));
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,8 +12,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: var(--secondary);
-  text-shadow: 2px 2px #25434a;
+  color: rgb(var(--secondary));
+  text-shadow: 0.2px 0.2px rgb(var(--primary));
   margin-bottom: 15px;
 }
 .contact-wrapper {
@@ -26,7 +26,14 @@
 }
 
 .contact-wrapper input, textarea {
-  min-width: 100%
+  min-width: 100%;
+  max-width: 70vw;
+  max-height: 35vh;
+}
+
+.contact-input textarea {
+  min-height: 15vh;
+
 }
 
 .contact-field {
@@ -42,8 +49,9 @@
 }
 
 #submit-btn input {
-  color: var(--secondary);
-  text-shadow: 1px 1px #25434a;
+  background-color: rgb(var(--background));
+  text-shadow: 0.2px 0.2px rgb(var(--primary));
+  border: 1px solid rgb(var(--secondary));
 }
 
 .submit-btn {
@@ -52,16 +60,16 @@
 
 .submit-btn i {
   position: absolute;
-  left: 75%;
+  left: 80%;
   top: 35%;
-  color: var(--secondary);
+  color: rgb(var(--secondary));
 }
 
 #submit-btn input:hover,
 #submit-btn input:focus {
   transition: 0.2s;
   cursor: pointer;
-  color: black !important;
+  color: rgb(var(--secondary)) !important;
   text-shadow: none;
   outline: none;
 }
@@ -69,11 +77,11 @@
 #submit-btn:hover i,
 #submit-btn:focus-within i {
   z-index: 100;
-  transform: scale(1.1);
+  transform: translateY(-3px) translateX(3px);
   transition: all 0.5s ease-in-out;
-  color: black !important;
   text-shadow: none;
   outline: none;
+  color: rgb(var(--secondary)) !important;
 }
 
 @media only screen and (max-width: 400px) {
