--- a/src/components/ContactUs.css
+++ b/src/components/ContactUs.css
@@ -29,6 +29,14 @@
   min-width: 100%;
   max-width: 70vw;
   max-height: 35vh;
+  background-color:  rgba(var(--background), 0.5);
+}
+.contact-wrapper input::placeholder {
+  color: rgba(var(--hover), 0.8);
+}
+
+.contact-wrapper textarea::placeholder {
+  color: rgba(var(--hover), 0.8);
 }
 
 .contact-input textarea {
@@ -52,6 +60,7 @@
   background-color: rgb(var(--background));
   text-shadow: 0.2px 0.2px rgb(var(--primary));
   border: 1px solid rgb(var(--secondary));
+  margin-bottom: 2rem;
 }
 
 .submit-btn {
@@ -61,7 +70,7 @@
 .submit-btn i {
   position: absolute;
   left: 80%;
-  top: 35%;
+  top: 25%;
   color: rgb(var(--secondary));
 }
 
