--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -84,9 +84,10 @@
 }
 .footer-links:hover i,
 .footer-links:focus i {
-  color: rgb(var(--hover));
-  transform: rotateY(360deg);
-  transition: 0.7s ease-in-out;
+  color: rgb(var(--secondary));
+  transition: all 0.3s ease-in-out;
+  transform: scale(1.05);
+  text-shadow: none;
   outline: none;
 }
 
