--- a/src/components/ContactUs.css
+++ b/src/components/ContactUs.css
@@ -1,5 +1,5 @@
 .contact-container {
-  background-color: rgba(var(--background), 0.5);
+  background: rgb(var(--background), 50%);
   color: rgb(var(--secondary));
   display: flex;
   justify-content: center;
