--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 :root {
   scroll-padding-top: 60px;
   scroll-behavior: smooth;
-  --background: 46, 51, 64;
-  --primary: 232, 223, 214;
-  --secondary: 232, 223, 214;
-  --hover: 232, 223, 214;
+  --color-background-main: 245, 245, 245;
+  --color-background-second: 225, 225, 225;
+  --color-background-third: 205, 205, 205;
+  --color-main-700: 23, 23, 23;
+  --color-main-500: 48, 48, 48;
+  --color-main-300: 68, 68, 69;
+  --hover: 122, 122, 133;
 }
 
 * {
@@ -37,6 +40,6 @@
 *::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    background: rgba(var(--secondary), 0.5);
+    background: rgba(var(--color-main-700), 0.5);
     -webkit-box-shadow: inset 0 0 1rem rgba(var(--hover), 0.4);
 }
