--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer-container {
-  background-color: rgba(var(--background), 0.9);
+  background-color: rgba(var(--color-background-main), 0.9);
   padding: 1rem 0 2rem 0;
   display: flex;
   flex-direction: column;
@@ -9,7 +9,7 @@
 
 .social-icon-link:hover,
 .social-icon-link:focus {
-  color: rgb(var(--secondary));
+  color: rgb(var(--color-main-700));
   transition: all 0.3s ease-in-out;
   transform: scale(1.05);
   text-shadow: none;
@@ -44,7 +44,7 @@
 }
 
 .social-logo {
-  color: rgb(var(--secondary));
+  color: rgb(var(--color-main-700));
   justify-self: start;
   margin: 1.2rem;
   cursor: pointer;
