--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,10 +1,12 @@
 .footer-container {
-  background-color: rgba(var(--color-background-main), 0.9);
+  background: url('../images/dots.svg') center;
+  box-shadow: inset 0 0 0 2300px rgb(var(--color-background-second), 62%);
   padding: 1rem 0 2rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 0;
 }
 
 .social-icon-link:hover,
