--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,7 +1,6 @@
 .projects {
-  background: url('../images/dots.svg') center center/cover no-repeat;
-
-  box-shadow: inset 0 0 0 2800px rgb(27 94 101 / 42%);
+  background: url('../images/dots.svg') center;
+  box-shadow: inset 0 0 0 2300px rgb(var(--color-background-second), 62%);
   display: flex;
   flex-flow: column;
   align-items: center;
