--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -105,7 +105,7 @@
 }
 
 .projects__item__info {
-  background: rgb(19 74 72 / 50%);
+  background: rgb(var(--color-background-main), 60%);
   padding: 10px 15px 10px;
   min-height: 138px;
   flex-direction: column;
