--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   --color-main-700: 23, 23, 23;
   --color-main-500: 48, 48, 48;
   --color-main-300: 68, 68, 69;
-  --hover: 122, 122, 133;
+  --color-primary: 122, 222, 133;
 }
 
 * {
@@ -25,21 +25,23 @@
   font-size: 3rem;
 }
 
-
+.theme--color {
+  color: rgb(var(--color-primary));
+}
 *::-webkit-scrollbar {
     width: 0.7rem;
 }
 
 *::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 1rem rgba(var(--hover), 0.4);
+    -webkit-box-shadow: inset 0 0 1rem rgba(var(--color-primary), 0.4);
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    background-color: rgba(var(--hover), 0.4);
+    background-color: rgba(var(--color-primary), 0.4);
 }
 
 *::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
     border-radius: 10px;
     background: rgba(var(--color-main-700), 0.5);
-    -webkit-box-shadow: inset 0 0 1rem rgba(var(--hover), 0.4);
+    -webkit-box-shadow: inset 0 0 1rem rgba(var(--color-primary), 0.4);
 }
