--- a/src/components/About.css
+++ b/src/components/About.css
@@ -26,7 +26,7 @@
   align-items: center;
   align-content: center;
   line-height: 1.5rem;
-  color: rgb(var(--hover));
+  color: rgb(var(--color-primary));
   text-shadow: 0.4px 0.4px rgb(var(--color-background-second));
 }
 
