--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -39,7 +39,7 @@
   outline: none;
   text-shadow: 1px 1px rgb(var(--color-background-second));
   transform: scale(0.99) translateX(1%) translateY(-1%);
-  box-shadow: 1px 1px rgb(var(--hover)) !important;
+  box-shadow: 1px 1px rgb(var(--color-primary)) !important;
 }
 
 
@@ -52,5 +52,5 @@
   opacity: 1;
   text-shadow: 1px 1px rgb(var(--color-background-second));
   transform: scale(0.99) translateX(1%) translateY(-1%);
-  box-shadow: 1px 1px rgb(var(--hover)) !important;
+  box-shadow: 1px 1px rgb(var(--color-primary)) !important;
 }
