--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -20,7 +20,7 @@
 }
 /* Social Icons */
 .social-icon-link {
-  color: rgb(var(--hover));
+  color: rgb(var(--color-primary));
   font-size: 1.3rem;
 }
 
