--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -25,7 +25,7 @@
   width: 90%;
   margin: 0 auto;
   margin-bottom: 20px;
-  background: linear-gradient(to right bottom, rgba(var(--hover), 0.2), rgba(var(--color-background-main), 0.3), rgba(var(--hover), 0.4), rgba(var(--color-background-main), 0.5), rgba(var(--hover), 0.6), rgba(var(--color-background-main), 0.7));
+  background: linear-gradient(to right bottom, rgba(var(--color-primary), 0.2), rgba(var(--color-background-main), 0.3), rgba(var(--color-primary), 0.4), rgba(var(--color-background-main), 0.5), rgba(var(--color-primary), 0.6), rgba(var(--color-background-main), 0.7));
 }
 
 .projects__wrapper {
@@ -64,7 +64,7 @@
   flex-flow: column;
   margin-bottom: 2rem;
   width: 100%;
-  box-shadow: 2px 1px 1px 1px rgba(var(--hover), 30%);
+  box-shadow: 2px 1px 1px 1px rgba(var(--color-primary), 30%);
   border-radius: 10px;
   overflow: hidden;
   text-decoration: none;
@@ -124,7 +124,7 @@
   align-content: center;
   display: flex;
   padding: 0px 15px;
-  color: rgb(var(--hover));
+  color: rgb(var(--color-primary));
   text-shadow: 0.4px 0.4px rgb(var(--color-background-second));
 }
 
