--- a/src/components/ContactUs.css
+++ b/src/components/ContactUs.css
@@ -1,5 +1,5 @@
 .contact-container {
-  background: url('../images/dots.svg') center;
+  background: url('../images/dots.svg') center/cover;
   box-shadow: inset 0 0 0 2300px rgb(var(--color-background-second), 62%);
   color: rgb(var(--color-main-700));
   display: flex;
@@ -36,11 +36,11 @@
 }
 
 .contact-wrapper input::placeholder {
-  color: rgba(var(--color-primary), 0.8);
+  color: rgba(var(--color-main-300), 0.8);
 }
 
 .contact-wrapper textarea::placeholder {
-  color: rgba(var(--color-primary), 0.8);
+  color: rgba(var(--color-main-300), 0.8);
 }
 
 .contact-input textarea {
