--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,5 @@
 .footer-container {
-  background: url('../images/dots.svg') center;
-  box-shadow: inset 0 0 0 2300px rgb(var(--color-background-second), 62%);
+  background: rgb(var(--color-background-second));
   padding: 1rem 0 2rem 0;
   display: flex;
   flex-direction: column;
