--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -4,7 +4,7 @@
     linear-gradient(to bottom, rgb(122 154 151 / 52%), rgb(131 134 134 / 50%)),
     url('../images/alex-sketcher.jpeg');*/
   background: url('../images/dots.svg') center;
-  box-shadow: inset 0 0 0 2300px rgb(var(--color-background-second), 62%);
+  box-shadow: inset 0 0 0 2300px rgb(var(--color-background-main), 62%);
   height: 100vh;
   width: 100%;
   display: flex;
