--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -1,6 +1,6 @@
 .projects {
   background: url('../images/dots.svg') center;
-  box-shadow: inset 0 0 0 2300px rgb(var(--color-background-second), 62%);
+  box-shadow: inset 0 0 0 2300px rgb(var(--color-background-main), 62%);
   display: flex;
   flex-flow: column;
   align-items: center;
@@ -133,6 +133,7 @@
   display: flex;
   align-content: center;
   justify-content: space-between;
+
 }
 
 .projects__skills span {
@@ -141,11 +142,13 @@
   padding: 3px 6px;
   font-size: 0.8rem;
   letter-spacing: 0.05rem;
-  background-color: rgba(var(--color-background-main), 0.4);
+  background-color: rgb(var(--color-background-third), 40%);
   font-variant: petite-caps;
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  color: rgb(var(--color-main-300)) !important;
+  font-variant: all-petite-caps;
 }
 
 .projects__skills span:before {
