--- a/src/App.css
+++ b/src/App.css
@@ -34,15 +34,15 @@
 }
 
 *::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 1rem rgba(var(--color-primary), 0.4);
+    -webkit-box-shadow: inset 0 0 1rem rgb(var(--color-primary), 20%);
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    background-color: rgba(var(--color-primary), 0.4);
+    background-color: rgb(var(--color-primary), 20%);
 }
 
 *::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    background: rgba(var(--color-main-700), 0.5);
-    -webkit-box-shadow: inset 0 0 1rem rgba(var(--color-primary), 0.4);
+    background: rgba(var(--color-main-700), 30%);
+    -webkit-box-shadow: inset 0 0 1rem rgb(var(--color-primary), 20%);
 }
