restyled button and adjusted for theme changing

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,56 +1,44 @@
 
 .btn {
-  padding: 8px 20px;
-  border-radius: 2px;
-  outline: none;
-  border: none;
-  cursor: pointer;
-  box-shadow: none !important;
-}
-
-.btn--outline {
-  background-color: transparent;
-  color: rgb(var(--color-main-700));
-  padding: 8px 20px;
-  border: 1px solid rgb(var(--color-background-main));
-  transition: all 0.3s ease-out;
+  width: fit-content;
+  height: 40px;
+  color: rgb(var(--color-main-300));
   border-radius: 3px;
-  text-shadow: 1px 1px rgb(var(--color-background-second));
+  padding: 10px 20px;
+  background: transparent;
   cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+  box-shadow: inset 2px 2px 2px 0px rgb(var(--color-main-700), 50%),
+              7px 7px 20px 0px rgb(var(--color-main-700), 10%),
+              4px 4px 5px 0px rgb(var(--color-main-700), 10%);
+  outline: none;
   text-decoration: none;
   letter-spacing: 0.1rem;
 }
 
-.btn--medium {
-  padding: 8px 20px;
-  font-size: 18px;
-  cursor: pointer;
-  border-radius: 3px;
+.btn-custom {
+  background: linear-gradient(0deg,
+              rgb(var(--color-background-third), 100%) 0%,
+              rgb(var(--color-background-main), 100%) 100%);
+  border: 1px solid rgb(var(--color-main-300), 20%);
+
+}
+.btn-custom:before {
+  height: 0%;
+  width: 2px;
 }
 
-
-.btn--medium:hover,
-.btn:hover,
-.btn--outline:hover {
-  transition: all 0.3s ease-in-out;
-  background: rgb(var(--color-background-main));
+.btn-custom:hover,
+.btn-custom:focus,
+.btn-custom:focus-within {
   color: rgb(var(--color-main-700));
-  opacity: 0.8;
-  outline: none;
-  text-shadow: 1px 1px rgb(var(--color-background-second));
-  transform: scale(0.99) translateX(1%) translateY(-1%);
-  box-shadow: 1px 1px rgb(var(--color-primary)) !important;
+  box-shadow: 2px 2px 4px 0 rgb(var(--color-main-700), 50%),
+              -2px -2px 4px 0 rgb(var(--color-main-700), 50%),
+              inset -2px -2px 4px 0 rgb(var(--color-main-700), 20%),
+              inset 2px 2px 4px 0 rgb(var(--color-main-700), 20%);
 }
 
 
-.btn--medium:focus-within,
-.btn:focus-within,
-.btn--outline:focus-within {
-  transition: all 0.3s ease-in-out;
-  background: rgb(var(--color-background-second));
-  color: rgb(var(--color-main-700));
-  opacity: 1;
-  text-shadow: 1px 1px rgb(var(--color-background-second));
-  transform: scale(0.99) translateX(1%) translateY(-1%);
-  box-shadow: 1px 1px rgb(var(--color-primary)) !important;
-}
+
